@@ -13,6 +13,10 @@ changes' is much more useful than 'misc edits' or 'code cleanup'.
 small - this just lets others know that the file has changed if nothing
 else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
+Remove global variable, remove suspect tests.
+ random_maps/treasure.c
+Nicolas Weeger, 2008-03-29
+
 Remove obsolete other_arch field which was used for spell in firewall.
  server/time.c
 Nicolas Weeger, 2008-03-29
